@@ -32,7 +32,7 @@ Slack Coder, the maintainer of sbotools2, has been a friendly and
 helpful correspondent. Although they are implemented differently here,
 GPG verification and non-root permission for the less-destructive
 parts of sbotools were his ideas. He also suggested changing to the
-MIT License and provided other useful feedback.
+MIT License and has provided other useful feedback.
 
 Finally, a good number of users have made valuable reports and feature
 requests over the years, both before and after this sbotools repository
