@@ -60,8 +60,9 @@ or the md5sum check fails, a new download is attempted from
 Slackware 14.0 and Slackware 14.1.
 
 Root privileges are required to run **sboinstall**. If an invalid
-configuration is detected in */etc/sbotools/sbotools.conf*, the script
-exits with a diagnostic message.
+configuration is detected in */etc/sbotools/sbotools.conf*, or if
+invalid options are specified, the script exits with a diagnostic
+message.
 
 ## OPTIONS
 
