@@ -49,7 +49,8 @@ sboremove\fR\
 \&. If an invalid configuration is detected in
 .I
 /etc/sbotools/sbotools.conf\fR\
-\&, the script exits with a diagnostic message.
+\&, or if invalid options are specified, the script
+exits with a diagnostic message.
 .SH OPTIONS
 .P
 .B
