@@ -45,7 +45,7 @@ EOF
 
 my ($help, $vers, $dist, $work, $options, $interactive);
 
-GetOptions(
+my $options_ok = GetOptions(
 	'help|h'            => \$help,
 	'version|v'         => \$vers,
 	'dist|clean-dist|d' => \$dist,
@@ -63,6 +63,10 @@ if ($vers) { show_version(); exit 0 }
 unless ($< == 0) {
 	show_usage();
 	usage_error "This is a root-only script.";
+}
+unless ($options_ok) {
+	show_usage();
+	usage_error "One or more invalid options detected.";
 }
 
 lint_sbo_config($self, %config);
