@@ -68,7 +68,7 @@ my $jobs = $config{JOBS};
 my $gpg = $config{GPG_VERIFY};
 my ($help, $vers, $no_install, $non_int, $no_reqs, $compat32, $ctemp, $utemp, $reinstall, $mass_rebuild, $reverse_rebuild);
 
-GetOptions(
+my $options_ok = GetOptions(
 	'help|h'            => \$help,
 	'version|v'         => \$vers,
 	'noclean|c=s'       => \$noclean,
@@ -94,6 +94,10 @@ if ($vers) { show_version(); exit 0; }
 unless ($< == 0) {
 	show_usage();
 	usage_error "This is a root-only script.";
+}
+unless ($options_ok) {
+	show_usage();
+	usage_error "One or more invalid options detected.";
 }
 
 lint_sbo_config($self, %config);
